--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(Addition_of_2_matrix Addition_of_2_matrix.c)
 add_executable(SubtractMatrix_of_2_matrix  "SubtractMatrix_of_2_matrix .c")
 add_executable(Multiplication_of_2_matrix Multiplication_of_2_matrix.c)
 add_executable(Transpose_of_a_matrix Transpose_of_a_matrix.c)
+add_executable(Inverse_of_a_matrix Inverse_of_a_matrix.c)
