--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,8 @@ add_executable(Bisection_method Bisection_method.c)
 add_executable(Newtons_Forward_Interpolation Newtons_Forward_Interpolation.c)
 add_executable(Newtons_Backward_Interpolation Newtons_Backward_Interpolation.c)
 add_executable(Lagrange_Interpolation Lagrange_Interpolation.c)
-
 add_executable(Addition_of_2_matrix Addition_of_2_matrix.c)
-add_executable(SubtractMatrix_of_2_matrix  "SubtractMatrix_of_2_matrix .c")
 add_executable(Multiplication_of_2_matrix Multiplication_of_2_matrix.c)
 add_executable(Transpose_of_a_matrix Transpose_of_a_matrix.c)
 add_executable(Inverse_of_a_matrix Inverse_of_a_matrix.c)
+add_executable(Newtons_Difference Newtons_Difference.c)
